--- a/yaml/back.yaml
+++ b/yaml/back.yaml
@@ -21,17 +21,17 @@ project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 2.7575489687884480e+00, 2.4538179410389409e+00,
-       -7.3138306021189840e+02, -9.8503376932524995e-03,
-       3.9820344817853806e+00, -4.2671974987602931e+02,
-       6.6059748912978818e-05, 1.7788280121182137e-02, 1. ]
+   data: [ -1.7347525234064132e+00, -2.8194214156263655e+00,
+       7.2193530677856450e+02, -2.4175517143884002e-02,
+       -4.1482458238068247e+00, 7.1560256564910264e+02,
+       -2.4175517143883849e-04, -1.5725028713001191e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 6.99999988e-01, 1. ]
+   data: [ 8.00000012e-01, 8.00000012e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 0., -100. ]
+   data: [ 0., -20. ]
