--- a/yaml/front.yaml
+++ b/yaml/front.yaml
@@ -21,17 +21,17 @@ project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 1.9935473814335434e+00, 1.8341535089880348e+00,
-       -4.9443380133472675e+02, 2.7188062794285692e-02,
-       2.7800439912480206e+00, -2.4625957316153932e+02,
-       6.2900614434533830e-04, 1.2918431277089916e-02, 1. ]
+   data: [ -2.4631030662731246e+00, -3.8111555069973546e+00,
+       1.0027361690709788e+03, -6.1826365809754737e-02,
+       -5.3529588645798851e+00, 8.7663690063633089e+02,
+       -4.5661921305814861e-04, -2.1200699637917618e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 8.00000012e-01, 1. ]
+   data: [ 8.50000024e-01, 8.29999983e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -20., -80. ]
+   data: [ 0., 0. ]
