--- a/yaml/left.yaml
+++ b/yaml/left.yaml
@@ -1,37 +1,92 @@
 %YAML:1.0
 ---
+# =============== 640x480 ================
 camera_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 2.6847581733946294e+02, 0., 3.3092904689755920e+02, 0.,
-       2.6858701054092967e+02, 2.4384862389676562e+02, 0., 0., 1. ]
+   data: [ 269.04029494, 0., 331.09116622, 0.,
+       269.10702032, 242.48451633, 0., 0., 1. ]
 dist_coeffs: !!opencv-matrix
    rows: 4
    cols: 1
    dt: d
-   data: [ -1.8843202987092700e-01, 2.3518306482816553e-02,
-       -8.1231986237479091e-03, 2.9290522549313262e-03 ]
+   data: [ -0.18299879, 0.01125116,
+       0.00548213, -0.00250442 ]
 resolution: !!opencv-matrix
    rows: 2
    cols: 1
    dt: i
    data: [ 640, 480 ]
+# # =============== 800x600 ================
+# camera_matrix: !!opencv-matrix
+#    rows: 3
+#    cols: 3
+#    dt: d
+#    data: [ 336.9060407, 0., 413.55791313, 0.,
+#        337.33334106, 303.05522932, 0., 0., 1. ]
+# dist_coeffs: !!opencv-matrix
+#    rows: 4
+#    cols: 1
+#    dt: d
+#    data: [ -0.18477394, 0.01681783,
+#        -0.00168028, 0.00073889 ]
+# resolution: !!opencv-matrix
+#    rows: 2
+#    cols: 1
+#    dt: i
+#    data: [ 800, 600 ]
+# # =============== 1024x768 ================
+# camera_matrix: !!opencv-matrix
+#    rows: 3
+#    cols: 3
+#    dt: d
+#    data: [ 432.16449664, 0., 531.09160169, 0.,
+#        432.31894174, 390.07632918, 0., 0., 1. ]
+# dist_coeffs: !!opencv-matrix
+#    rows: 4
+#    cols: 1
+#    dt: d
+#    data: [ -0.18371823, 0.02166855,
+#        -0.00880712, 0.00332659 ]
+# resolution: !!opencv-matrix
+#    rows: 2
+#    cols: 1
+#    dt: i
+#    data: [ 1024, 768 ]
+# # =============== 1280x1024 ================
+# camera_matrix: !!opencv-matrix
+#    rows: 3
+#    cols: 3
+#    dt: d
+#    data: [ 573.47624531, 0., 662.3789755, 0.,
+#        574.16426361, 516.21699372, 0., 0., 1. ]
+# dist_coeffs: !!opencv-matrix
+#    rows: 4
+#    cols: 1
+#    dt: d
+#    data: [ -0.18736821, 0.02460242,
+#        -0.00806782, 0.00205066 ]
+# resolution: !!opencv-matrix
+#    rows: 2
+#    cols: 1
+#    dt: i
+#    data: [ 1280, 1024 ]
 project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ -3.1217309191271099e+00, -4.5268004794301628e+00,
-       1.4274791701888482e+03, 1.7623993445252045e-02,
-       -3.8135021893015089e+00, 8.6930751415648672e+02,
-       2.6958967627289914e-05, -9.5259492064214118e-03, 1. ]
+   data: [ -7.1141465241770536e+00, -1.2448508349978846e+01,
+       2.8442388110124098e+03, -2.2046641682459950e-01,
+       -1.0999561181381109e+01, 1.8268296927218209e+03,
+       -5.0566956197444029e-05, -2.1406689505950184e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 4.39999998e-01, 7.30000019e-01 ]
+   data: [ 5.00000000e-01, 8.70000005e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -29., 12. ]
+   data: [ -11., -8. ]
