--- a/yaml/front.yaml
+++ b/yaml/front.yaml
@@ -1,37 +1,93 @@
 %YAML:1.0
 ---
+# =============== 640x480 ===============
 camera_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 2.7050051570539750e+02, 0., 3.4135507614866253e+02, 0.,
-       2.7036596635325344e+02, 2.3869389273383510e+02, 0., 0., 1. ]
+   data: [ 268.66871893, 0., 334.49535143, 0.,
+       268.86965713, 243.0071038, 0., 0., 1. ]
 dist_coeffs: !!opencv-matrix
    rows: 4
    cols: 1
    dt: d
-   data: [ -1.8499417790235648e-01, 8.4124327624785153e-03,
-       7.2476767407238154e-03, -2.2524042454727827e-03 ]
+   data: [ -0.19055029, 0.02883511,
+       -0.01148809, 0.00301319 ]
 resolution: !!opencv-matrix
    rows: 2
    cols: 1
    dt: i
    data: [ 640, 480 ]
+# # =============== 800x600 ================
+# camera_matrix: !!opencv-matrix
+#    rows: 3
+#    cols: 3
+#    dt: d
+#    data: [ 338.41492182, 0., 421.56434724, 0.,
+#        338.72192311, 300.74873529, 0., 0., 1. ]
+# dist_coeffs: !!opencv-matrix
+#    rows: 4
+#    cols: 1
+#    dt: d
+#    data: [ -0.18983128, 0.01725228,
+#        -0.00727174, 0.00533771 ]
+# resolution: !!opencv-matrix
+#    rows: 2
+#    cols: 1
+#    dt: i
+#    data: [ 800, 600 ]
+# # =============== 1024x768 ================
+# camera_matrix: !!opencv-matrix
+#    rows: 3
+#    cols: 3
+#    dt: d
+#    data: [ 429.50767435, 0., 546.93887249, 0.,
+#        429.66885584, 399.72972388, 0., 0., 1. ]
+# dist_coeffs: !!opencv-matrix
+#    rows: 4
+#    cols: 1
+#    dt: d
+#    data: [ -0.18106984, -0.00051017,
+#        0.01968023, -0.0078272 ]
+# resolution: !!opencv-matrix
+#    rows: 2
+#    cols: 1
+#    dt: i
+#    data: [ 1024, 768 ]
+# # =============== 1280x1024 ================
+# camera_matrix: !!opencv-matrix
+#    rows: 3
+#    cols: 3
+#    dt: d
+#    data: [ 569.19310253, 0., 681.06140549, 0.,
+#        569.38331698, 527.09476015, 0., 0., 1. ]
+# dist_coeffs: !!opencv-matrix
+#    rows: 4
+#    cols: 1
+#    dt: d
+#    data: [ -0.18902427, 0.02581124,
+#        -0.00663928, 0.00061407 ]
+# resolution: !!opencv-matrix
+#    rows: 2
+#    cols: 1
+#    dt: i
+#    data: [ 1280, 1024 ]
+
 project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ -2.1681713775618303e+00, -4.2616352659878993e+00,
-       1.0199929875860497e+03, -2.8151062810294158e-01,
-       -4.8656704401176425e+00, 7.3728588106657753e+02,
-       -4.6257483863341423e-04, -1.1883876262957118e-02, 1. ]
+   data: [ -1.7741882862186209e+00, -6.1386598174690281e+00,
+       8.7986453284309334e+02, -1.9615102532684150e-01,
+       -6.5857189199890112e+00, 7.1508213760675653e+02,
+       -5.7886371808238304e-04, -1.3452256564624612e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 4.69999999e-01, 9.59999979e-01 ]
+   data: [ 5.79999983e-01, 8.70000005e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -4., -22. ]
+   data: [ -59., -96. ]
