✨ feat(images中，重新进行了标定，增加了结果视频和gif): 修复了上个版本中某些地方代码块冲突合并没有解决的问题

--- a/yaml/left.yaml
+++ b/yaml/left.yaml
@@ -1,92 +1,37 @@
 %YAML:1.0
 ---
-# =============== 640x480 ================
 camera_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 269.04029494, 0., 331.09116622, 0.,
-       269.10702032, 242.48451633, 0., 0., 1. ]
+   data: [ 2.6904029494000002e+02, 0., 3.3109116621999999e+02, 0.,
+       2.6910702032000000e+02, 2.4248451632999999e+02, 0., 0., 1. ]
 dist_coeffs: !!opencv-matrix
    rows: 4
    cols: 1
    dt: d
-   data: [ -0.18299879, 0.01125116,
-       0.00548213, -0.00250442 ]
+   data: [ -1.8299878999999999e-01, 1.1251160000000000e-02,
+       5.4821300000000000e-03, -2.5044199999999998e-03 ]
 resolution: !!opencv-matrix
    rows: 2
    cols: 1
    dt: i
    data: [ 640, 480 ]
-# # =============== 800x600 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 336.9060407, 0., 413.55791313, 0.,
-#        337.33334106, 303.05522932, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18477394, 0.01681783,
-#        -0.00168028, 0.00073889 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 800, 600 ]
-# # =============== 1024x768 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 432.16449664, 0., 531.09160169, 0.,
-#        432.31894174, 390.07632918, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18371823, 0.02166855,
-#        -0.00880712, 0.00332659 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1024, 768 ]
-# # =============== 1280x1024 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 573.47624531, 0., 662.3789755, 0.,
-#        574.16426361, 516.21699372, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18736821, 0.02460242,
-#        -0.00806782, 0.00205066 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1280, 1024 ]
 project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ -7.1141465241770536e+00, -1.2448508349978846e+01,
-       2.8442388110124098e+03, -2.2046641682459950e-01,
-       -1.0999561181381109e+01, 1.8268296927218209e+03,
-       -5.0566956197444029e-05, -2.1406689505950184e-02, 1. ]
+   data: [ -8.7555997442762976e+00, -1.3902906165883111e+01,
+       3.2129881466235402e+03, -4.1331951887509211e-01,
+       -1.2281974947844301e+01, 1.9821053624387951e+03,
+       -1.0859314803378409e-03, -2.3343118304901017e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 5.00000000e-01, 8.70000005e-01 ]
+   data: [ 5.00000000e-01, 8.60000014e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -11., -8. ]
+   data: [ -6., -2. ]
