--- a/yaml/right.yaml
+++ b/yaml/right.yaml
@@ -1,92 +1,37 @@
 %YAML:1.0
 ---
-# =============== 640x480 ================
 camera_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 269.53582977, 0., 340.78010526, 0.,
-       269.64507936, 238.38769719, 0., 0., 1. ]
+   data: [ 2.6953582977000002e+02, 0., 3.4078010526000003e+02, 0.,
+       2.6964507936000001e+02, 2.3838769719000001e+02, 0., 0., 1. ]
 dist_coeffs: !!opencv-matrix
    rows: 4
    cols: 1
    dt: d
-   data: [ -0.17905253, 0.00395981,
-       0.00920284, -0.00283072 ]
+   data: [ -1.7905252999999999e-01, 3.9598100000000002e-03,
+       9.2028400000000003e-03, -2.8307200000000001e-03 ]
 resolution: !!opencv-matrix
    rows: 2
    cols: 1
    dt: i
    data: [ 640, 480 ]
-# # =============== 800x600 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 338.19989517, 0., 425.89639986, 0.,
-#        338.26219332, 298.59846823, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18751157, 0.02053236,
-#        -0.00487739, 0.00142365 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 800, 600 ]
-# # =============== 1024x768 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 434.3609095, 0., 547.08516705, 0.,
-#        434.46420573, 384.70811355, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18263595, 0.00754393,
-#        0.00727525, -0.00226599 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1024, 768 ]
-# # =============== 1280x1024 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 575.34883907, 0., 683.73781121, 0.,
-#        575.42139709, 508.05244152, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18696386, 0.02084052,
-#        -0.00536361, 0.00141557 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1280, 1024 ]
 project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ -4.0140794598197296e+00, -9.9826910205248467e+00,
-       1.8831034745943239e+03, 4.9933136628693822e-02,
-       -7.6714394020078407e+00, 9.1990804450317080e+02,
-       2.2192505168307800e-04, -1.7031859724008541e-02, 1. ]
+   data: [ -2.8149304810151726e+01, -4.6718617737250462e+01,
+       9.8767875020954743e+03, 3.5756650087288655e-01,
+       -4.0605647120553009e+01, 5.3734907896381374e+03,
+       1.1036003113360435e-03, -8.0924794675494752e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 3.79999995e-01, 5.69999993e-01 ]
+   data: [ 4.90000010e-01, 8.99999976e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -29., -93. ]
+   data: [ -18., -31. ]
