--- a/yaml/back.yaml
+++ b/yaml/back.yaml
@@ -1,92 +1,37 @@
 %YAML:1.0
 ---
-# =============== 640x480 ================
 camera_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 268.05640776, 0., 315.60653086, 0.,
-       268.09170697, 239.39359036, 0., 0., 1. ]
+   data: [ 2.6805640776000001e+02, 0., 3.1560653086000002e+02, 0.,
+       2.6809170697000002e+02, 2.3939359035999999e+02, 0., 0., 1. ]
 dist_coeffs: !!opencv-matrix
    rows: 4
    cols: 1
    dt: d
-   data: [ -0.18313444, 0.00860263,
-       0.00801362, -0.00293123 ]
+   data: [ -1.8313444000000001e-01, 8.6026300000000000e-03,
+       8.0136200000000008e-03, -2.9312299999999999e-03 ]
 resolution: !!opencv-matrix
    rows: 2
    cols: 1
    dt: i
    data: [ 640, 480 ]
-# # =============== 800x600 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 336.4600678, 0., 394.41040204, 0.,
-#        336.5976214, 299.85036674, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18779765, 0.02143592,
-#        -0.00664867, 0.00239832 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 800, 600 ]
-# # =============== 1024x768 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 431.53516682, 0., 506.29101716, 0.,
-#        431.74765987, 385.42169954, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18488207, 0.01849904,
-#        -0.00569835, 0.00181811 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1024, 768 ]
-# # =============== 1280x1024 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 572.14100078, 0., 629.39800622, 0.,
-#        572.38141509, 510.4991237, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18304415, 0.01205179,
-#        0.00288655, -0.00142433 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1280, 1024 ]
 project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ -1.8793208600821822e+00, -6.4314224933089310e+00,
-       1.0747570710714601e+03, 1.5276396534508685e-01,
-       -6.8097007897000923e+00, 7.5072379492164885e+02,
-       3.0327966715115327e-04, -1.3986247612459790e-02, 1. ]
+   data: [ -1.9259038156621118e+00, -6.6126481035129592e+00,
+       1.0429551083795839e+03, -3.6062253542663208e-02,
+       -7.2535963532522674e+00, 8.1309980231315160e+02,
+       -2.6523078212150166e-04, -1.4291054964101360e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 4.69999999e-01, 9.20000017e-01 ]
+   data: [ 6.39999986e-01, 1.05999994e+00 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -13., -95. ]
+   data: [ 2., -57. ]
