--- a/yaml/front.yaml
+++ b/yaml/front.yaml
@@ -1,93 +1,37 @@
 %YAML:1.0
 ---
-# =============== 640x480 ===============
 camera_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ 268.66871893, 0., 334.49535143, 0.,
-       268.86965713, 243.0071038, 0., 0., 1. ]
+   data: [ 2.6866871893000001e+02, 0., 3.3449535143000003e+02, 0.,
+       2.6886965713000001e+02, 2.4300710380000001e+02, 0., 0., 1. ]
 dist_coeffs: !!opencv-matrix
    rows: 4
    cols: 1
    dt: d
-   data: [ -0.19055029, 0.02883511,
-       -0.01148809, 0.00301319 ]
+   data: [ -1.9055029000000001e-01, 2.8835110000000001e-02,
+       -1.1488089999999999e-02, 3.0131899999999998e-03 ]
 resolution: !!opencv-matrix
    rows: 2
    cols: 1
    dt: i
    data: [ 640, 480 ]
-# # =============== 800x600 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 338.41492182, 0., 421.56434724, 0.,
-#        338.72192311, 300.74873529, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18983128, 0.01725228,
-#        -0.00727174, 0.00533771 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 800, 600 ]
-# # =============== 1024x768 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 429.50767435, 0., 546.93887249, 0.,
-#        429.66885584, 399.72972388, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18106984, -0.00051017,
-#        0.01968023, -0.0078272 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1024, 768 ]
-# # =============== 1280x1024 ================
-# camera_matrix: !!opencv-matrix
-#    rows: 3
-#    cols: 3
-#    dt: d
-#    data: [ 569.19310253, 0., 681.06140549, 0.,
-#        569.38331698, 527.09476015, 0., 0., 1. ]
-# dist_coeffs: !!opencv-matrix
-#    rows: 4
-#    cols: 1
-#    dt: d
-#    data: [ -0.18902427, 0.02581124,
-#        -0.00663928, 0.00061407 ]
-# resolution: !!opencv-matrix
-#    rows: 2
-#    cols: 1
-#    dt: i
-#    data: [ 1280, 1024 ]
-
 project_matrix: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [ -1.7741882862186209e+00, -6.1386598174690281e+00,
-       8.7986453284309334e+02, -1.9615102532684150e-01,
-       -6.5857189199890112e+00, 7.1508213760675653e+02,
-       -5.7886371808238304e-04, -1.3452256564624612e-02, 1. ]
+   data: [ -1.4016114238013733e+00, -4.7776406833265908e+00,
+       7.8442431180155734e+02, -1.9448639286044558e-01,
+       -5.0530265504435636e+00, 6.6139775237992865e+02,
+       -6.0026664463100723e-04, -1.0440557554236509e-02, 1. ]
 scale_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ 5.79999983e-01, 8.70000005e-01 ]
+   data: [ 6.29999995e-01, 9.10000026e-01 ]
 shift_xy: !!opencv-matrix
    rows: 2
    cols: 1
    dt: f
-   data: [ -59., -96. ]
+   data: [ -51., -77. ]
